// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileInfoPanel /> renders profile info correctly when rating is not null 1`] = `
<div
  className="panel panel-success"
>
  <div
    className="panel-heading"
  >
    <h3
      className="panel-title"
    >
      Profile Info
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <p>
      First Name: 
      Abc
    </p>
    <p>
      Last Name: 
      Def
    </p>
    <p>
      Gender: 
      male
    </p>
    <p>
      Education: 
      Graduate
    </p>
    <p>
      Date of Birth: 
      10th Jun 1990
    </p>
    <p>
      Marital Status: 
      Single
    </p>
    <p>
      Address: 
      119,bajiprabhunagar,Nagpur
    </p>
    <p>
      City: 
      Nagpur
    </p>
    <p>
      State: 
      IN-MH
    </p>
    <p>
      Pincode: 
      440033
    </p>
    <p>
      Report Rating: 
      <strong
        className="text-success"
      >
        Good
      </strong>
    </p>
    <p>
      Auditor Rating: 
      <strong>
        unknown rating
      </strong>
       (
      <a
        onClick={[Function]}
        style={Object {}}
      >
        change
      </a>
      )
    </p>
  </div>
</div>
`;

exports[`<ProfileInfoPanel /> renders profile info correctly when rating is null 1`] = `
<div
  className="panel panel-success"
>
  <div
    className="panel-heading"
  >
    <h3
      className="panel-title"
    >
      Profile Info
    </h3>
  </div>
  <div
    className="panel-body"
  >
    <p>
      First Name: 
      Abc
    </p>
    <p>
      Last Name: 
      Def
    </p>
    <p>
      Gender: 
      male
    </p>
    <p>
      Education: 
      Graduate
    </p>
    <p>
      Date of Birth: 
      10th Jun 1990
    </p>
    <p>
      Marital Status: 
      Single
    </p>
    <p>
      Address: 
      119,bajiprabhunagar,Nagpur
    </p>
    <p>
      City: 
      Nagpur
    </p>
    <p>
      State: 
      IN-MH
    </p>
    <p>
      Pincode: 
      440033
    </p>
    <p>
      Report Rating: 
    </p>
    <p>
      Auditor Rating: 
      <strong>
        unknown rating
      </strong>
       (
      <a
        onClick={[Function]}
        style={Object {}}
      >
        change
      </a>
      )
    </p>
  </div>
</div>
`;
